--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "publish": "electron-forge publish",
     "lint": "echo \"No linting configured\""
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gautgel/Monitor-Desktop-app.git"
+  },
   "keywords": [],
   "author": {
     "name": "Gauthier Gellé",
@@ -47,6 +51,7 @@
   "dependencies": {
     "electron-log": "^4.3.0",
     "electron-squirrel-startup": "^1.0.0",
+    "os-utils": "0.0.14",
     "update-electron-app": "^2.0.1"
   },
   "devDependencies": {
