--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "publish": "electron-forge publish",
     "lint": "echo \"No linting configured\""
   },
+  "build": "electron-builder build --mac --win --publish never",
+  "deploy": "electron-builder build --mac --win --publish always",
   "repository": {
     "type": "git",
     "url": "https://github.com/gautgel/Monitor-Desktop-app.git"
@@ -51,6 +53,7 @@
   "dependencies": {
     "electron-log": "^4.3.0",
     "electron-squirrel-startup": "^1.0.0",
+    "electron-updater": "^4.3.5",
     "os-utils": "0.0.14",
     "update-electron-app": "^2.0.1"
   },
@@ -60,6 +63,7 @@
     "@electron-forge/maker-rpm": "^6.0.0-beta.54",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
     "@electron-forge/maker-zip": "^6.0.0-beta.54",
-    "electron": "10.1.5"
+    "electron": "^10.1.5",
+    "electron-builder": "^22.9.1"
   }
 }
